--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -1,3 +1,17 @@
+\vspace*{\fill}
+\begin{center}
+    {\color{Black} \rule{\linewidth}{1.2mm} }\\
+\vspace{0.25in}
+{\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter VI : Experiments And Results}}}}}
+\vspace{0.35in}\\
+    {\color{Black} \rule{\linewidth}{1.2mm} }
+\end{center}
+\vspace*{\fill}
+\addcontentsline{toc}{chapter}{\color{Black}{Chapter VI : Experiments And Results}}
+\setcounter{section}{0}
+
+\newpage
+
 \section{Introduction}
 \vspace{0.2in}
 \hspace*{0.16in}
