--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -143,7 +143,7 @@
    \renewcommand{\footrulewidth}{0pt}%
    \fancyhead{}
    \fancyfoot{}
-   \fancyfoot[C]{\vspace{-0.16in}\textcolor{Gray}{\Large{Page}}\hspace{0.04in} \large{\thepage}\hspace{0.07in}\large{|}\hspace{0.07in}\large{\pageref{LastPage}}}
+   \fancyfoot[C]{\vspace{0.16in}\textcolor{Gray}{\Large{Page}}\hspace{0.04in} \large{\thepage}\hspace{0.07in}\large{|}\hspace{0.07in}\large{\pageref{LastPage}}}
 }%
 \pagestyle{empty}
 
@@ -247,35 +247,7 @@
 
 \newpage
 
-\vspace*{\fill}
-\begin{center}
-    {\color{Black} \rule{\linewidth}{1.2mm} }\\
-\vspace{0.25in}
-{\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter I : Blood cells \& artificial intelligence}}}}}
-\vspace{0.35in}\\
-    {\color{Black} \rule{\linewidth}{1.2mm} }
-\end{center}
-\vspace*{\fill}
-\addcontentsline{toc}{chapter}{\color{Black}{Chapter I : Blood cells \& artificial intelligence}}
-\setcounter{section}{0}
-
-\newpage
-
 \input{chap1.tex}
-
-\newpage
-
-\vspace*{\fill}
-\begin{center}
-    {\color{Black} \rule{\linewidth}{1.2mm} }\\
-\vspace{0.25in}
- {\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter II : State of the art}}}}}
-\vspace{0.35in}\\
-    {\color{Black} \rule{\linewidth}{1.2mm} }
-\end{center}
-\vspace*{\fill}
-\addcontentsline{toc}{chapter}{\color{Black}{Chapter II : State of the art}}
-\setcounter{section}{0}
 
 \newpage
 
@@ -283,35 +255,7 @@
 
 \newpage
 
-\vspace*{\fill}
-\begin{center}
-    {\color{Black} \rule{\linewidth}{1.2mm} }\\
-\vspace{0.25in}
-    {\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter III : Dataset Collection}}}}}
-\vspace{0.35in}\\
-    {\color{Black} \rule{\linewidth}{1.2mm} }
-\end{center}
-\vspace*{\fill}
-\addcontentsline{toc}{chapter}{\color{Black}{Chapter III : Dataset Collection}}
-\setcounter{section}{0}
-
-\newpage
-
 \input{chap3.tex}
-
-\newpage
-
-\vspace*{\fill}
-\begin{center}
-    {\color{Black} \rule{\linewidth}{1.2mm} }\\
-\vspace{0.25in}
-    {\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter IV : }}}}}
-\vspace{0.35in}\\
-    {\color{Black} \rule{\linewidth}{1.2mm} }
-\end{center}
-\vspace*{\fill}
-\addcontentsline{toc}{chapter}{\color{Black}{Chapter IV : }}
-\setcounter{section}{0}
 
 \newpage
 
@@ -319,35 +263,7 @@
 
 \newpage
 
-\vspace*{\fill}
-\begin{center}
-    {\color{Black} \rule{\linewidth}{1.2mm} }\\
-\vspace{0.25in}
-{\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter V : Methodology}}}}}
-\vspace{0.35in}\\
-    {\color{Black} \rule{\linewidth}{1.2mm} }
-\end{center}
-\vspace*{\fill}
-\addcontentsline{toc}{chapter}{\color{Black}{Chapter V : Methodology}}
-\setcounter{section}{0}
-
-\newpage
-
 \input{chap5.tex}
-
-\newpage
-
-\vspace*{\fill}
-\begin{center}
-    {\color{Black} \rule{\linewidth}{1.2mm} }\\
-\vspace{0.25in}
-{\centering\fontsize{30}{40}{\bfseries{\color{Black}{\scshape{Chapter VI : Experiments And Results}}}}}
-\vspace{0.35in}\\
-    {\color{Black} \rule{\linewidth}{1.2mm} }
-\end{center}
-\vspace*{\fill}
-\addcontentsline{toc}{chapter}{\color{Black}{Chapter VI : Experiments And Results}}
-\setcounter{section}{0}
 
 \newpage
 
@@ -355,21 +271,7 @@
 
 \newpage
 
-\vspace*{0.2in}
-
-\thispagestyle{empty}
-
-\begin{center}
-    {\color{Black} \rule{4in}{1.4mm} }\\
-    \vspace{0.1in}
-    \scshape{\fontsize{34}{46}{\bfseries{\color{Black}{Conclusion}}}}
-    \\
-    \vspace{0.6in}
-\end{center}
-\cftaddtitleline{toc}{part}{\vspace{-0.12in}\color{Black}{Conclusion}}{}
-\begin{changemargin}{0.9cm}{0.9cm}
-\hspace*{0.16in}
-\end{changemargin}
+\input{conclusion.tex}
 
 \newpage
 
