fixed segnet tables!

--- a/PFE/latex/tables/plt_segnet.tex
+++ b/PFE/latex/tables/plt_segnet.tex
@@ -2,7 +2,7 @@
 \centering
 \begin{tabular}{|c|c|c|c|c|c|c|c|}
 \hline
- \textbf{Image} & \textbf{Real\_Count} & \textbf{CHT} & \textbf{CCL} & \textbf{EDT} & \textbf{CHT\_Accuracy} & \textbf{CCL\_Accuracy} & \textbf{EDT\_Accuracy} \\ \hline
+ \textbf{Image} & \textbf{Real\_Count} & \textbf{CHT} & \textbf{CCL} & \textbf{EDT} & \textbf{CHT\_acc} & \textbf{CCL\_acc} & \textbf{EDT\_acc} \\ \hline
  Im001\_1 & 0 & 0 & 0 & 0 & 100.0 & 100.0 & 100.0 \\ 
  Im004\_1 & 4 & 2 & 3 & 2 & 50.0 & 75.0 & 50.0 \\ 
  Im015\_1 & 7 & 1 & 2 & 1 & 14.29 & 28.57 & 14.29 \\ 
