--- a/PFE/latex/tables/rbc_segnet.tex
+++ b/PFE/latex/tables/rbc_segnet.tex
@@ -2,7 +2,7 @@
 \centering
 \begin{tabular}{|c|c|c|c|c|c|c|c|}
 \hline
- \textbf{Image} & \textbf{Real\_Count} & \textbf{CHT} & \textbf{CCL} & \textbf{EDT} & \textbf{CHT\_Accuracy} & \textbf{CCL\_Accuracy} & \textbf{EDT\_Accuracy} \\ \hline
+ \textbf{Image} & \textbf{Real\_Count} & \textbf{CHT} & \textbf{CCL} & \textbf{EDT} & \textbf{CHT\_acc} & \textbf{CCL\_acc} & \textbf{EDT\_acc} \\ \hline
  Im001\_1 & 215 & 212 & 234 & 247 & 98.6 & 91.16 & 85.12 \\ 
  Im004\_1 & 258 & 255 & 264 & 285 & 98.84 & 97.67 & 89.53 \\ 
  Im015\_1 & 293 & 269 & 212 & 261 & 91.81 & 72.35 & 89.08 \\ 
