fixed do_unet wbc table!

--- a/PFE/latex/tables/WBC_DOUNET.tex
+++ b/PFE/latex/tables/WBC_DOUNET.tex
@@ -1,5 +1,6 @@
 \begin{table}[H]
 \centering
+\resizebox{\textwidth}{!}{%
 \begin{tabular}{|  c | c | c | c | c | c | c | c |}
 \hline
 \textbf{Image} & \textbf{Real count} & \textbf{Watershed} & \textbf{CCL} & \textbf{CHT} & \textbf{Watershed\_acc} & \textbf{CCL\_acc} & \textbf{CHT\_acc} \\
@@ -21,7 +22,7 @@ Im108\_0 & 4 & 4 & 5 & 4 & 100.00 & 75.00 & 100.00 \\
 \textbf{Total 13 images} &  &  &  &  & 97.94 & 58.74 & 88.7 \\
 \textbf{Total 108 images} &  &  &  &  & 95.64 & 51.68 & 85.76 \\
 \hline
-\end{tabular}
+\end{tabular}}
 \caption{WBC Counting results with 3 algorithms}
 \label{table:UNet-WBC}
 \end{table}
