--- a/PFE/latex/chap1.tex
+++ b/PFE/latex/chap1.tex
@@ -23,13 +23,11 @@ In this chapter, we will present to you the blood cells and it's three main type
 
 A blood cell, also called a hematopoietic cell, hemocyte, or hematocyte, is a cell produced through hematopoiesis and found mainly in the blood. Major types of blood cells include red blood cells (erythrocytes), white blood cells (leukocytes), and platelets (thrombocytes). Together, these three kinds of blood cells (as we can see in fig\ref{fig:bloodCellTypes}) add up to a total 45\% of the blood tissue by volume, with the remaining 55\% of the volume composed of plasma, the liquid component of blood. \textsuperscript{\cite{hopkins1993human}}\\
 
-\vspace{0.1in}
-
 \begin{figure}[h]
 \centering
   \vspace{-0.1in}
-    \centerline{\includegraphics[width = 4in, height = 3.4in]{../images/BloodCells.jpg}}
-    \caption{Blood cell Types}
+    \centerline{\includegraphics[width = 3in, height = 2.4in]{../images/BloodCells.jpg}}
+    \caption{Blood Cell Types}
     \label{fig:bloodCellTypes}
 \end{figure}
 
@@ -56,18 +54,20 @@ White blood cells are divided into five types:
 
 \begin{itemize}
   \item \textbf{Neutrophils:} Help protect your body from infections by killing bacteria, fungi and foreign debris.
+  \vspace{-0.05in}
   \item \textbf{Lymphocytes:} Consist of T cells, natural killer cells and B cells to protect against viral infections and produce proteins to help you fight infection (antibodies).
+  \vspace{-0.05in}
   \item \textbf{Eosinophils:} Identify and destroy parasites, cancer cells and assists basophils with your allergic response.
+  \vspace{-0.05in}
   \item \textbf{Basophils:} Produces an allergic response like coughing, sneezing or a runny nose.
+  \vspace{-0.05in}
   \item \textbf{Monocytes:} Defend against infection by cleaning up damaged cells.
 \end{itemize}
-
-\newpage
 
 \begin{figure}[H]
 \centering
   \vspace{-0.1in}
-    \centerline{\fbox{\includegraphics[width = 3.1in, height = 2.5in]{../images/white_blood_cells.jpg}}}
+    \centerline{\fbox{\includegraphics[width = 3in, height = 2.3in]{../images/white_blood_cells.jpg}}}
     \caption{The five types of White blood cells}
 \end{figure}
 
@@ -80,13 +80,12 @@ Platelets help prevent blood loss at sites of vascular injury. To do this, they 
 \begin{figure}[h]
 \centering
   \vspace{-0.1in}
-    \centerline{\fbox{\includegraphics[width = 3.1in, height = 2.5in]{../images/platelets.jpg}}}
+    \centerline{\fbox{\includegraphics[width = 3in, height = 2.3in]{../images/platelets.jpg}}}
     \caption{Platelets}
 \end{figure}
 
 \section{Complete blood count}
 \subsection{Definition}
-
 A complete blood count (CBC) is a set of tests that gives information about the cells in a person's blood. A scientist or lab technician performs the requested testing and provides the requesting medical professional with the results of the CBC. In the past, counting the cells in a patient's blood was performed manually, by viewing a slide prepared with a sample of the patient's blood under a microscope. Today, this process is generally automated by use of an automated analyzer, with only approximately 10-20\% of samples now being examined manually. Abnormally high or low counts may indicate the presence of a disease.
 
 \subsection{Purpose of a complete blood count}
@@ -107,12 +106,21 @@ These are some of the health problems that can be identified by a CBC:
 
 \begin{itemize}
   \item Anemia
+  \vspace{-0.05in}
   \item Autoimmune disorders
+  \vspace{-0.05in}
   \item Bone marrow problems
+  \vspace{-0.05in}
   \item Leukemia (Cancer)
+  \vspace{-0.05in}
   \item Dehydration
+  \vspace{-0.05in}
   \item Heart disease
+  \vspace{-0.05in}
   \item Infection
+  \vspace{-0.05in}
   \item Inflammation
+  \vspace{-0.05in}
   \item Vitamin and mineral deficiencies
+  \vspace{-0.05in}
 \end{itemize}
