added plt do-unet and merged with overleaf

--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -87,6 +87,10 @@ After training the model we did a benchmark on the 13 images then on the complet
 
 \input{tables/WBC_DOUNET.tex}
 
+\subsection{Platlets}
+
+\input{latex/tables/PLT_DOUnet.tex}
+
 \section{SegNet Results}
 SegNet segmentation results were pretty accurate for white blood cells and platelets, as for red blood cells, the segmentation was done using dual output (mask and edge-mask) to get rid of overlapped cells.\\
 Here are the results of the Mean Squared Error (MSE) loss function on each type of cell:
