--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -89,7 +89,7 @@ After training the model we did a benchmark on the 13 images then on the complet
 
 \subsection{Platlets}
 
-\input{latex/tables/PLT_DOUnet.tex}
+\input{tables/PLT_DOUnet.tex}
 
 \section{SegNet Results}
 SegNet segmentation results were pretty accurate for white blood cells and platelets, as for red blood cells, the segmentation was done using dual output (mask and edge-mask) to get rid of overlapped cells.\\
