updated indentation for chapter 1

--- a/PFE/latex/chap1.tex
+++ b/PFE/latex/chap1.tex
@@ -14,13 +14,12 @@
 
 \section{Introduction}
 \vspace{0.2in}
-\hspace*{0.16in}
-
+\hspace{\parindent}
 In this chapter, we will present to you the blood cells and it's three main types (red, white blood cells and platelets) as well as the complete blood count and the purpose of it. Then, we will present some of the many diseases related to blood cells, and how can we detect and avoid them using artificial intelligence techniques.
 
 \section{Blood cell}
 \subsection{Definition}
-
+\hspace{\parindent}
 A blood cell, also called a hematopoietic cell, hemocyte, or hematocyte, is a cell produced through hematopoiesis and found mainly in the blood. Major types of blood cells include red blood cells (erythrocytes), white blood cells (leukocytes), and platelets (thrombocytes). Together, these three kinds of blood cells (as we can see in fig\ref{fig:bloodCellTypes}) add up to a total 45\% of the blood tissue by volume, with the remaining 55\% of the volume composed of plasma, the liquid component of blood. \textsuperscript{\cite{hopkins1993human}}\\
 
 \begin{figure}[h]
@@ -34,7 +33,7 @@ A blood cell, also called a hematopoietic cell, hemocyte, or hematocyte, is a ce
 That said, there are three main types of blood cells:
 
 \subsection{Red blood cells}
-
+\hspace{\parindent}
 Red blood cells (RBCs) are the cells which carry fresh oxygen all over the human body. This is vital to our health. They are round with a flattish, indented center, like doughnuts without a hole. 
 The hemoglobin is the protein found inside the red blood cell, and it's main purpose is carrying oxygen.
 
@@ -47,7 +46,7 @@ People with anemia may have red blood cells that have an abnormal shape or that 
 Symptoms of anemia include tiredness, fast heart rate, pale skin, feeling cold, and, in severe cases, heart failure. Children who don't have enough healthy red blood cells grow and develop more slowly than other children. These symptoms show how important red blood cells are to your daily life. \textsuperscript{\cite{RBC-urmcrochester}}
 
 \subsection{White blood cells}
-
+\hspace{\parindent}
 On the other hand, White blood cells (WBCs), also known as leukocytes, are the ones responsible for protecting the human body from infections. As part of the immune system, These cells circulate in the blood and respond to injury or illness. They travel through the bloodstream searching for infections. Then, they notify other WBCs of their location to help defending against attacks from other unknown organisms. Once the army of WBCs arrive, they fight the invader by producing antibody proteins to attach to the organism and destroy it. \textsuperscript{\cite{WBC-clevelandclinic}}
 
 White blood cells are divided into five types:
@@ -72,7 +71,7 @@ White blood cells are divided into five types:
 \end{figure}
 
 \subsection{Platelets}
-
+\hspace{\parindent}
 Platelets help prevent blood loss at sites of vascular injury. To do this, they adhere, aggregate and form a procoagulant surface favorizing thrombin generation and fibrin formation. In addition, platelets express and release substances that promote tissue repair and influence processes such as angiogenesis, inflammation and the immune response. They contain large secretable pools of biologically active proteins, while newly synthesized active metabolites are also released. \textsuperscript{\cite{nurden2008platelets}}
 
 \vspace{0.2in}
@@ -86,10 +85,11 @@ Platelets help prevent blood loss at sites of vascular injury. To do this, they 
 
 \section{Complete blood count}
 \subsection{Definition}
+\hspace{\parindent}
 A complete blood count (CBC) is a set of tests that gives information about the cells in a person's blood. A scientist or lab technician performs the requested testing and provides the requesting medical professional with the results of the CBC. In the past, counting the cells in a patient's blood was performed manually, by viewing a slide prepared with a sample of the patient's blood under a microscope. Today, this process is generally automated by use of an automated analyzer, with only approximately 10-20\% of samples now being examined manually. Abnormally high or low counts may indicate the presence of a disease.
 
 \subsection{Purpose of a complete blood count}
-
+\hspace{\parindent}
 A complete blood count is a common blood test that is done for a variety of reasons:
 
 \begin{itemize}
@@ -100,7 +100,7 @@ A complete blood count is a common blood test that is done for a variety of reas
 \end{itemize}
 
 \subsection{Diseases identified by a complete blood count}
-
+\hspace{\parindent}
 Abnormal test results could be an indication of a serious health problem or a simple one that can be remedied by eating better or taking supplements.\\
 These are some of the health problems that can be identified by a CBC:
 
