--- a/PFE/latex/resume.tex
+++ b/PFE/latex/resume.tex
@@ -11,7 +11,7 @@
 \end{center}
 \cftaddtitleline{toc}{part}{\vspace{-0.12in}\color{Black}{Résumé}}{}
 \begin{changemargin}{0.9cm}{0.9cm}
-\hspace*{0.16in}
+\hspace{\parindent}
 \end{changemargin}
 
 Le comptage de cellules est une tâche fastidieuse qui bénéficierait grandement de l'automatisation. Le comptage précis des cellules CBC (Complete Blood Count) fournit des informations quantitatives essentielles et joue un rôle clé dans la recherche biologique ainsi que dans les applications industrielles et biomédicales. Malheureusement, la méthode de comptage manuel couramment utilisée demande beaucoup de temps, mal standardisée et n'est pas reproductible. La tâche est rendue encore plus difficile par le chevauchement des cellules. la mauvaise qualité de l'imagerie ... , nous comparons ici deux réseaux de neurones convolutionnels qui vont segmenter les globules globules (rouges, blancs et plaquettes) comme une première phase, et les compter dans la seconde phase en utilisant 3 algorithmes (Watershed, Connected Component Labeling et Circle Hough Transform).
