updated chapter 3 structure, indentation and image sizes!

--- a/PFE/latex/chap3.tex
+++ b/PFE/latex/chap3.tex
@@ -13,30 +13,28 @@
 \newpage
 
 \section{Introduction}
-\hspace*{0.16in}
+\hspace{\parindent}
+
 
 \section{ALL-IDB}
+\hspace{\parindent}
+ALL-IDB (Acute Lymphoblastic Leukemia Image Database for Image Processing) \textsuperscript{\cite{labati2011all}} is a public and free dataset, specifically designed for the evaluation and the comparison of algorithms for segmentation and image classification. The database focus on Acute Lymphoblastic Leukemia (ALL), Acute is a type of blood cancer that starts in white blood cells in bone marrow, the soft inner part of bones. It develops from immature lymphocytes, a kind of white blood cell that’s key to immune system.\textsuperscript{\cite{Annie_Stuart_What_2022_webmd}}.\
 
-ALL-IDB (Acute Lymphoblastic Leukemia Image Database for Image Processing) \textsuperscript{\cite{labati2011all}} is a public and free dataset, specifically designed for the evaluation and the comparison of algorithms for segmentation and image classification. The database focus on Acute Lymphoblastic Leukemia (ALL), Acute is a type of blood cancer that starts in white blood cells in bone marrow, the soft inner part of bones. It develops from immature lymphocytes, a kind of white blood cell that’s key to immune system.\textsuperscript{\cite{Annie_Stuart_What_2022_webmd}}.\\
+Each image in the dataset, Contains classification/position of ALL lymphoblasts is provided by expert oncologists. A lymphoblast is a modified naive lymphocyte with altered cell morphology. It occurs when the lymphocyte is activated by an antigen.\
 
-Each image in the dataset, Contains classification/position of ALL lymphoblasts is provided by expert oncologists. A lymphoblast is a modified naive lymphocyte with altered cell morphology. It occurs when the lymphocyte is activated by an antigen.\\
-
-The images of the dataset has been captured with an optical laboratory microscope coupled with a Canon PowerShot G5 camera. All images are in JPG format with 24 bit color depth, resolution 2592 x 1944. the ALL-IDB devides on two Datasets ALL-IDB1 and ALL-IDB2.\\
+The images of the dataset has been captured with an optical laboratory microscope coupled with a Canon PowerShot G5 camera. All images are in JPG format with 24 bit color depth, resolution 2592 x 1944. the ALL-IDB devides on two Datasets ALL-IDB1 and ALL-IDB2.\
 
 \subsection{Dataset ALL-IDB1}
-
+\hspace{\parindent}
 The ALL-IDB1 can be used for segmentation or classification with image processing methods or Artificial intelligence models. The dataset is composed of 108 images collected during September, 2005. It contains about 39000 blood elements, where the lymphocytes has been labeled by expert oncologists.
 
 \begin{figure}[H]
 \centering
-\includegraphics{../images/ALLIDB1.jpg}
+\includegraphics[width = 5in, height = 3in]{../images/ALLIDB1.jpg}
 \caption{Examples of the images contained in ALL-IDB1: healthy cells from non-ALL patients (a,b,c), probable lymphoblasts from ALL patients (d,e,f). }
 \end{figure}
 
-
 \textbf{annotation:} input image ''Im006\_1.jpg'' (a) and the related classification file ''Im006\_1.xyc'' reporting the coordinates of the centroids of probable ALL lymphoblasts (b).
-
-
 
 \begin{figure}[H]
 \begin{minipage}[b]{0.35\linewidth}
@@ -69,23 +67,22 @@ The ALL-IDB1 can be used for segmentation or classification with image processin
 \caption{Sample data from the ALL-IDB1 Database}
 \end{figure}
 
-The ALL-IDB1 image files are named with the notation ImXXX\_Y.jpg where XXX is a 3-digit integer counter and Y is a boolean digit equal to 0 if no blast cells are present, and equal to 1 if at least one blast cell is present in the image. All images labeled with Y=0 are from for healthy individuals, and all images labeled with Y=1 are from ALL patients. Each image file ImXXX\_Y.jpg (figure \ref{fig:Im006.jpg}, \ref{fig:Im033.jpg}) is associated with a text file ImXXX\_Y.xyc (figure \ref{fig:Im006.xyc}, \ref{fig:Im033.xyc}) reporting the coordinates of the centroids of the blast cells, if any. \\
+The ALL-IDB1 image files are named with the notation ImXXX\_Y.jpg where XXX is a 3-digit integer counter and Y is a boolean digit equal to 0 if no blast cells are present, and equal to 1 if at least one blast cell is present in the image. All images labeled with Y=0 are from for healthy individuals, and all images labeled with Y=1 are from ALL patients. Each image file ImXXX\_Y.jpg (figure \ref{fig:Im006.jpg}, \ref{fig:Im033.jpg}) is associated with a text file ImXXX\_Y.xyc (figure \ref{fig:Im006.xyc}, \ref{fig:Im033.xyc}) reporting the coordinates of the centroids of the blast cells, if any.\\
 
-if we plot the coordinates in the Img006\_1.xyc (figure \ref{fig:Im006.jpg}) file on the image Im006\_1.jpg (figure \ref{fig:Im006.xyc}) we get the figure \ref{fig:Im006.xyc.jpg}
+If we plot the coordinates in the Img006\_1.xyc (figure \ref{fig:Im006.jpg}) file on the image Im006\_1.jpg (figure \ref{fig:Im006.xyc}) we get the figure \ref{fig:Im006.xyc.jpg}
+
+\newpage
 
 \begin{figure}[H]
 \centering
-\includegraphics{../images/img006.xyc.jpg}
+    \fbox{\includegraphics[width = 5in, height = 4in]{../images/img006.xyc.jpg}}
 \caption{coordinates from Img006\_1.xyc ploted on Img006\_1.jpg}
 \label{fig:Im006.xyc.jpg}
 \end{figure}
 
-\newpage
-
 \subsection{Dataset ALL-IDB1}
-
+\hspace{\parindent}
 This dataset has been created for testing the performances of classification systems. where the dataset has no segmentation information it contains only one information wich is the presence of ALL lymphoblasts, the dataset is a collection of cropped area of interest of normal and blast cells that belongs to the ALL-IDB1 dataset as we can see in figure \ref{fig:ALL-IDB2}
-
 
 \begin{figure}[H]
 \centering
@@ -94,23 +91,24 @@ This dataset has been created for testing the performances of classification sys
 \label{fig:ALL-IDB2}
 \end{figure}
 
+\vspace{-0.14in}
 
 The annotation of ALL-IDB2 is similar to the ALL-IDB1 but with no centroid coordinates. The ALL-IDB2 image files are named with the notation ImXXX\_Y.jpg where XXX is a progressive 3-digit integer and Y is a boolean digit equal to 0 if the cell placed in the center of the image is not a blast cell, and equal to 1 if the cell placed in the center of the image is a blast cell. all images labeled with Y=0 are from for healthy individuals, and all images labeled with Y=1 are from ALL patients. 
 
-\newpage 
-
 \section{Broad Bioimage Benchmark Collection}
-
-The Broad Bioimage Benchmark Collection (BBBC) is a collection of freely downloadable microscopy image sets, cited in 450+ studies. In addition to the images themselves, each set includes a description of the biological application and some type of "ground truth" (expected results) \textsuperscript{\cite{ljosa2012annotated}}. The BBBC is organized by the Broad Institute's Imaging Platform.\\
+\hspace{\parindent}
+The Broad Bioimage Benchmark Collection (BBBC) is a collection of freely downloadable microscopy image sets, cited in 450+ studies. In addition to the images themselves, each set includes a description of the biological application and some type of "ground truth" (expected results) \textsuperscript{\cite{ljosa2012annotated}}. The BBBC is organized by the Broad Institute's Imaging Platform.\
 
 The dataset contains 54 image collections of various cell types, each collection has at least one of 6 ground truth types such as cell count, foreground / background, outlines of objects, biological labels, location and bounding boxes. in the sections below we describe each ground truth:
+
 \subsection{Cell counts}
+\hspace{\parindent}
 In this case, the ground truth consists of the number of cells (or other objects) in each image, as counted by one or more humans. for example in BBBC1(Human HT29 colon-cancer cells) we have an image in figure \ref{fig:BBBC1} with the labels file in figure \ref{fig:BBBC001_Counts}:
 
 \begin{figure}[H]
 \begin{minipage}[c]{\linewidth}
 \centering
-\includegraphics[width=60mm]{../images/AS_09125_050118150001_A03f05d0.jpg}
+\includegraphics[width = 2.5in, height = 1.8in]{../images/AS_09125_050118150001_A03f05d0.jpg}
 \subcaption{AS\_09125\_050118150001\_A03f05d0.jpg}
 \label{fig:BBBC1}
 \end{minipage}
@@ -124,24 +122,23 @@ In this case, the ground truth consists of the number of cells (or other objects
 \caption{Sample data from the BBBC1 Database with counts Ground truth}
 \end{figure}
 
-
 in the figure \ref{fig:BBBC001_Counts} we can see the two counts performed by two experts, for the image \ref{fig:BBBC1} the first expert have found 241 cells but the second one found 257 cells.
 
 \subsection{Foreground and background}
-
+\hspace{\parindent}
 In this case, a human produces a binary (black and white but in some cases thy use other colors) image the same size as the original image. Pixels that belong to the foreground (i.e., the cells or other objects) are white, and pixels that belong to the background are black. in the example below (figure \ref{fig:BBBC004_img} and \ref{fig:BBBC004_F}) we can see the image and the corresponding mask where the cells colored with blue and the background with black.
 
 \begin{figure}[H]
 \begin{minipage}[c]{0.4\linewidth}
 \centering
-\includegraphics[width=80mm]{../images/BBBC4-1.jpg}
+\includegraphics[width=70mm]{../images/BBBC4-1.jpg}
 \subcaption{2Gray1.tif (image)}
 \label{fig:BBBC004_img}
 \end{minipage}
 \hfill
 \begin{minipage}[c]{0.4\linewidth}
 \centering
-\includegraphics[width=80mm]{../images/BBBC4-1-F.jpg}
+\includegraphics[width=70mm]{../images/BBBC4-1-F.jpg}
 \subcaption{1.tif (mask)}
 \label{fig:BBBC004_F}
 \end{minipage}
@@ -149,19 +146,20 @@ In this case, a human produces a binary (black and white but in some cases thy u
 \end{figure}
 
 \subsection{Outlines of individual objects}
+\hspace{\parindent}
 In this case, a human outlines each cell in the image in order to indicate which pixels belong to which cell. The ground truth is provided as binary images, with black outlines on a white background.
 
 \begin{figure}[H]
 \begin{minipage}[c]{0.4\linewidth}
 \centering
-\includegraphics[width=80mm]{../images/48hr-001-DIC.jpg}
+\includegraphics[width=70mm]{../images/48hr-001-DIC.jpg}
 \subcaption{48hr-001-DIC.jpg (image)}
 \label{fig:BBBC009_img}
 \end{minipage}
 \hfill
 \begin{minipage}[c]{0.4\linewidth}
 \centering
-\includegraphics[width=80mm]{../images/48hr-001-DIC_.jpg}
+\includegraphics[width=70mm]{../images/48hr-001-DIC_.jpg}
 \subcaption{48hr-001-DIC.jpg (edge mask)}
 \label{fig:BBBC009_O}
 \end{minipage}
@@ -169,49 +167,56 @@ In this case, a human outlines each cell in the image in order to indicate which
 \end{figure}
 
 \subsection{Biological labels}
+\hspace{\parindent}
 In these cases, the experiments have been prepared with control samples for which we know the expected biological result. The types of controls that are available dictate the type of statistic that can be calculated.
 
 \subsection{Location}
+\hspace{\parindent}
 In this case, the ground truth consists of the X, Y, and optionally Z location of objects (typically their centroids similar to ALL-IDB1 Annotation \ref{fig:Im006.xyc.jpg}) .
 
 \subsection{Bounding Boxes}
+\hspace{\parindent}
 Bounding boxes are rectangles completely enclosing an object.
 
-\newpage
+\vspace{-0.1in}
 
 \section{WBC Image Dataset : Fast and Robust Segmentation of White Blood Cell Images by Self-supervised Learning}
-This is two datasets of white blood cell (WBC) images used for “Fast and Robust Segmentation of White Blood Cell Images by Self-supervised Learning”, which can be used to evaluate cell image segmentation methods \textsuperscript{\cite{Zheng2018}}.
+\hspace{\parindent}
+This is two datasets of white blood cell (WBC) images used for “Fast and Robust Segmentation of White Blood Cell Images by Self-supervised Learning”, which can be used to evaluate cell image segmentation methods \textsuperscript{\cite{Zheng2018}}.\
 This collection contains two datasets different from each other in terms of the image color, cell shape, background, etc. The ground truth segmentation results are manually sketched by domain experts, where the nuclei, cytoplasms and background including red blood cells are marked in white, gray and black respectively. 
 
 \subsection{Dataset 1}
-was obtained from Jiangxi Tecom Science Corporation \textsuperscript{\cite{2022_tecom-cn}}, China. It contains three hundred 120×120 images of WBCs and their color depth is 24 bits. The images were taken by a Motic Moticam Pro 252A optical microscope camera with a N800-D motorized auto-focus microscope.
+\hspace{\parindent}
+Was obtained from Jiangxi Tecom Science Corporation \textsuperscript{\cite{2022_tecom-cn}}, China. It contains three hundred 120×120 images of WBCs and their color depth is 24 bits. The images were taken by a Motic Moticam Pro 252A optical microscope camera with a N800-D motorized auto-focus microscope.
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=\linewidth]{../images/WBC_Dataset1.png}
+\includegraphics[width=5.2in]{../images/WBC_Dataset1.png}
 \caption{Sample data from WBC\_Segmentaion Dataset 1}
 \label{fig:WBC_Dataset1_sample}
 \end{figure}
 
 \subsection{Dataset 2}
-consists of one hundred 300×300 color images, which were collected from the CellaVision blog \textsuperscript{\cite{2022_cellavision}}. The cell images are generally purple and may contain many red blood cells around the white blood cells.
+Consists of one hundred 300×300 color images, which were collected from the CellaVision blog \textsuperscript{\cite{2022_cellavision}}. The cell images are generally purple and may contain many red blood cells around the white blood cells.
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=\linewidth]{../images/WBC_Dataset2.png}
+\includegraphics[width=5.2in]{../images/WBC_Dataset2.png}
 \caption{Sample data from WBC\_Segmentaion Dataset 2}
 \label{fig:WBC_Dataset2_sample}
 \end{figure}
 
-
 \subsection{Annotation}
+\hspace{\parindent}
 The class labels of each image in Dataset 1 and Dataset 2 are stored in csv files. The labels (1- 5) represent neutrophil, lymphocyte, monocyte, eosinophil and basophil, respectively.
 
 
 \subsection{A large dataset of white blood cells containing cell locations and types, along with segmented nuclei and cytoplasm}
-
+\hspace{\parindent}
 The database is provided by \href{https://raabindata.com/free-data/#double-labeled-cropped-cells}{RabinData} and \textsuperscript{\cite{Kouzehkanan2022}} which devides on two separate datasets:
+
 \subsubsection{Raabin-WBC Data}
+\hspace{\parindent}
 Contains 4 sub-Datasets:
 \begin{itemize}
     \item \textbf{Double-labeled cropped cells} : Double-labeled cropped cells are also provided containing only five main classes including mature neutrophils, lymphocytes (small and large), eosinophils, monocytes, and basophils. 
@@ -226,6 +231,7 @@ Contains 4 sub-Datasets:
 \end{itemize}
 
 \subsubsection{Raabin-Leukemia Data}
+\hspace{\parindent}
 Contains 4 sub-Datasets:
 \begin{itemize}
     \item \textbf{Acute Lymphoblastic Leukemia}  
@@ -234,13 +240,15 @@ Contains 4 sub-Datasets:
     \item \textbf{Chronic Myelogenous Leukemia}
 \end{itemize}
 In each of these sub-Dataset, All samples were taken from patients who had referred to our collaborator medical laboratory (Takht-e Tavous Laboratory in Tehran, Iran). It should be notices Zeiss microscope and LG J3 smartphone camera had been used for imaging.
+
 \subsection{BCCD}
+\hspace{\parindent}
 BCCD (Blood Cell Count and Detection) Dataset is a small-scale dataset for blood cells detection. The dataset contains a total of 364 (640x480) jpeg images with their annotations. The original data and annotations are from \href{https://github.com/cosmicad/dataset}{cosmicad} and \href{https://github.com/akshaylamba/all_CELL_data}{akshaylamba}.\\
 In this project, the Faster R-CNN algorithm from keras-frcnn for Object Detection is used. From this dataset, nicolaschen1 developed two Python scripts to make preparation data (CSV file and images) for recognition of abnormalities in blood cells on medical images.
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=\linewidth]{../images/BBCD1.jpg}
+    \fbox{\includegraphics[width = 4.2in, height = 3.5in]{../images/BBCD1.jpg}}
 \caption{Sample data from BBCD}
 \label{fig:BBCD1}
 \end{figure}
@@ -248,13 +256,11 @@ In this project, the Faster R-CNN algorithm from keras-frcnn for Object Detectio
 In this database they use bounding boxes to locate the cells and each bounding box has the type of cell RBC or WBC and platlets. they are using the VOC format as a database architecture.
 
 \section{Dataset resume}
+\hspace{\parindent}
 
 \input{tables/table2.tex}
 
-\newpage
 \section{Conclusion}
-\hspace*{0.16in}
-
-
+\hspace{\parindent}
 
 \newpage
