updated plt and dedicate

--- a/PFE/latex/main.tex
+++ b/PFE/latex/main.tex
@@ -5,6 +5,7 @@
 \usepackage{float}
 \usepackage{lipsum}
 \usepackage{multirow}
+\usepackage{makecell}
 \usepackage{graphicx}
 \usepackage{subcaption}
 \usepackage[table,xcdraw,dvipsnames]{xcolor}
