--- a/PFE/latex/tables/UNet-WBC-Training.tex
+++ b/PFE/latex/tables/UNet-WBC-Training.tex
@@ -1,8 +1,8 @@
 \begin{table}[H]
-\begin{tabular}{|l|l|l|l|l|l|}
+\begin{tabular}{|l|l|l|l|l|l|l|}
 \hline
-\textbf{WBC Model} & \textbf{Loss}   &\textbf{Mean IOU} & \textbf{Dice}   & \textbf{Tversky} & \textbf{Accuracy} \\ \hline
-UNet      & 0.0120 & 0.0162   & 0.0863 & 0.0863  & 0.9976   \\ \hline
+\textbf{WBC Model} & \textbf{epochs} & \textbf{Loss}   &\textbf{Mean IOU} & \textbf{Dice}   & \textbf{Tversky} & \textbf{Accuracy} \\ \hline
+UNet      & 15 & 0.0120 & 0.0162   & 0.0863 & 0.0863  & 0.9976   \\ \hline
 \end{tabular}
 \caption{WBC model performance}
 \label{table:unet-wbc-training}
