--- a/PFE/latex/chap6.tex
+++ b/PFE/latex/chap6.tex
@@ -89,6 +89,8 @@ After training the model we did a benchmark on the 13 images then on the complet
 
 \subsection{Platlets}
 
+\input{tables/PLT_UNET_Train.tex}
+
 \input{tables/PLT_DOUnet.tex}
 
 \section{SegNet Results}
