--- a/PFE/latex/dedication.tex
+++ b/PFE/latex/dedication.tex
@@ -20,7 +20,7 @@
     \large{For her advices throughout my journey.}\\
     \textbf{\large{To all my dear friends and my partner Aghiles,}}\\
     \large{For their help and support.}\\
-    \textbf{\large{To my professor Touazi.}}\\
+    \textbf{\large{To my professor Touazi and Yagoubi..}}\\
     \large{For providing all their help needed.}\\
     \hfill\textbf{\Large{Neggazi Mohamed Lamine}}
 
@@ -28,14 +28,15 @@
     %\color{Red}{\large\textbf{{\lipsum[1-2]}}}
     % Neggazi Amine
     \itshape
-    \Large{\underline{Je dédie ce travail a :}}\\          \textbf{\large{À mon cher père Khelifa,}}\\\vspace{-0.1in}
-    \textbf{\large{À ma chère mère Fatma Zohra,}}\\
-    \large{Aucun hommage ne pourrait être a la hauteur de l’amour et de soutien\\\vspace{-0.1in}dont ils ne cessent de me combler,}\\
-    \textbf{\large{À ma chère sœur Maria,}}\\
-    \large{Pour son soutien et ces conseils précieux tout aux longue de mes études.}\\
-    \textbf{\large{À mes chers amis et mon binôme Zineb,}}\\
-    \large{Pour leur aide et supporte dans les moments difficiles.}\\
-    \textbf{\large{À toute ma famille, à tous ceux que j’aime.}}\\\vspace{0.1in}
+    \Large{\underline{I dedicate this work to:}}\\          \textbf{\large{To my dear mother Malika,}}\\\vspace{-0.1in}
+    \textbf{\large{And to my dear father Mohammed,}}\\
+    \large{Who have stood by me every step of the way\\\vspace{-0.1in}And motivated me to achieve many goals.}\\
+    \textbf{\large{To my dear sisters Imene and Feriel and my brother sofiane}}\\
+    \large{For her advices throughout my journey.}\\
+    \textbf{\large{To all my dear friends Meriem and my partner Amine,}}\\
+    \large{For their help and support.}\\
+    \textbf{\large{To my professor Touazi and Yagoubi.}}\\
+    \large{For providing all their help needed.}\\
     \hfill\textbf{\Large{Gharbi Aghiles}}
 
 \end{center}
